# minesweeper

./: CMakeLists.txt  README.md
inc/: board.hpp  matrix.hpp
src/: board.cpp  matrix.cpp  minesweeper.cpp
